--- a/_posts/blog/2014-09-18-baiduyun.md
+++ b/_posts/blog/2014-09-18-baiduyun.md
@@ -38,7 +38,7 @@ category: blog
 
 使用百度云，设置**相册自动备份**，下面交互会详细展示。
 
-<video src="/video/1.MP4" height="420" autoplay="autoplay" loop="loop" controls="controls">
+<video src="/video/1.mp4" height="420" autoplay="autoplay" loop="loop" controls="controls">
 Your browser does not support the video tag.
 </video>
 
@@ -48,7 +48,7 @@ Your browser does not support the video tag.
 > 朋友之间互相拍照，会让自己出现在各种朋友的手机里，说好的回去传给我，通常会被忘掉，甚至被删除。
 使用百度云建立**分享群**，或者**私聊**，在回到酒店等有WiFi的场景下，可以便捷的分享彼此的照片，你可以将其保存到自己的手机中，或者保存到自己的百度云空间。
 
-<video src="/video/2.MP4" height="420" autoplay="autoplay" loop="loop" controls="controls">
+<video src="/video/2.mp4" height="420" autoplay="autoplay" loop="loop" controls="controls">
 Your browser does not support the video tag.
 </video>
 
@@ -71,7 +71,7 @@ Your browser does not support the video tag.
 
 添新的方式我们都可以在微信等社交工具中看得到，这里百度云同样做的很赞。
 
-<video src="/video/3.MP4" height="420" autoplay="autoplay" loop="loop" controls="controls">
+<video src="/video/3.mp4" height="420" autoplay="autoplay" loop="loop" controls="controls">
 Your browser does not support the video tag.
 </video>
 
