change the layout of baiduyun blog

--- a/_posts/blog/2014-09-18-baiduyun.md
+++ b/_posts/blog/2014-09-18-baiduyun.md
@@ -38,9 +38,11 @@ category: blog
 
 使用百度云，设置**相册自动备份**，下面交互会详细展示。
 
+<div align="center">
 <video src="/video/1.mp4" height="420" autoplay="autoplay" loop="loop" controls="controls">
 Your browser does not support the video tag.
 </video>
+</div>
 
 可以看到，使用非常方便，在**传输列表**tab中，同步信息一目了然，打消用户的不安，满满的，都是备份天衣无缝的安全感。
 
@@ -48,9 +50,11 @@ Your browser does not support the video tag.
 > 朋友之间互相拍照，会让自己出现在各种朋友的手机里，说好的回去传给我，通常会被忘掉，甚至被删除。
 使用百度云建立**分享群**，或者**私聊**，在回到酒店等有WiFi的场景下，可以便捷的分享彼此的照片，你可以将其保存到自己的手机中，或者保存到自己的百度云空间。
 
+<div align="center">
 <video src="/video/2.mp4" height="420" autoplay="autoplay" loop="loop" controls="controls">
 Your browser does not support the video tag.
 </video>
+</div>
 
 这些微信式的交互设计，我们不得不将它与微信做一个小对比。
 
@@ -71,9 +75,11 @@ Your browser does not support the video tag.
 
 添新的方式我们都可以在微信等社交工具中看得到，这里百度云同样做的很赞。
 
+<div align="center">
 <video src="/video/3.mp4" height="420" autoplay="autoplay" loop="loop" controls="controls">
 Your browser does not support the video tag.
 </video>
+</div>
 
 ## 后续 ##
 
