why doesn't it build

--- a/_posts/blog/2014-09-18-baiduyun.md
+++ b/_posts/blog/2014-09-18-baiduyun.md
@@ -77,7 +77,7 @@ Your browser does not support the video tag.
 
 <div align="center">
 <video src="/video/3.mp4" height="420" autoplay="autoplay" loop="loop" controls="controls">
-Your browser does not support the video tag.
+Your browser does not support the video tag..
 </video>
 </div>
 
