why doesn't it build

--- a/_posts/blog/2014-09-18-baiduyun.md
+++ b/_posts/blog/2014-09-18-baiduyun.md
@@ -48,6 +48,7 @@ Your browser does not support the video tag.
 
 ### 场景二 ###
 > 朋友之间互相拍照，会让自己出现在各种朋友的手机里，说好的回去传给我，通常会被忘掉，甚至被删除。
+
 使用百度云建立**分享群**，或者**私聊**，在回到酒店等有WiFi的场景下，可以便捷的分享彼此的照片，你可以将其保存到自己的手机中，或者保存到自己的百度云空间。
 
 <div align="center">
@@ -58,7 +59,7 @@ Your browser does not support the video tag.
 
 这些微信式的交互设计，我们不得不将它与微信做一个小对比。
 
-*理念是产品形态的指路人。*
+**理念是产品形态的指路人。**
 
 微信是以信息为最初设计理念的，所以现在会发现使用它来共享照片非常不方便，批量发送给好友还好，可是这在理念上只是个消息，而不是珍贵的照片，所以我们发现，我想保存一堆照片的时候，非常繁琐，不易操作，效率低。虽然有**保存快盘**功能，但是只是附属，还是不便。
 而百度云是以存储数据，备份数据为设计理念的，所以朋友发来的消息不是消息，而是发来一堆待保存的数据。基于这个理念，百度云在照片分享和备份上的交互十分便捷。
