--- a/_posts/blog/2015-11-13-hotfix.md
+++ b/_posts/blog/2015-11-13-hotfix.md
@@ -1,3 +1,10 @@
+---
+layout: post
+title: Android App 线上热修复方案
+description: 双十一是这样应对线上出现的问题
+category: blog
+---
+
 # Android App 线上热修复方案
 
 热修复一词恐怕最早应用在微软。为了巩固其windows系统和office的市场占有率，微软开发并维护了一套线上修复方案，用于修复漏洞及特定问题（LDR），避免延续到发版解决（GDR），详见[HotFix维基词条](https://en.wikipedia.org/wiki/Hotfix#Microsoft)。
