--- a/_posts/blog/2014-09-18-baiduyun.md
+++ b/_posts/blog/2014-09-18-baiduyun.md
@@ -89,5 +89,5 @@ Your browser does not support the video tag..
 - 写完之后，突然觉得微信可以做的还有很多，之前我觉得其已经做得很好，通过这么不直觉的宏观对比，我觉得微信可以通过牛逼的交互和设计，将更多适应用户使用的功能赋予到微信中。他有微云，他有强大的后台，还有牛逼的产品经理和交互设计师，期待它做得更好，相信着，关注着。
 
 
-[RogerAce]:    http://rogerace.github.io  "RogerAce"
+[RogerAce]:    http://lirenlong.github.io  "RogerAce"
 [heidy]:  http://zhihuidalian.com "Heidy"
