--- a/_posts/blog/2015-11-13-hotfix.md
+++ b/_posts/blog/2015-11-13-hotfix.md
@@ -179,3 +179,7 @@ AndFix在实现上相对简洁，例如在c层核心hook代码中：
 ## 写在最后
 
 在业界中，热修复方案，棘手且重要。有时它可以避免发新版，避免无谓时间的浪费，稳住迭代节奏；有时它可以救项目于水深火热之中；有时它也可以带给用户展现上的惊喜。其技术较深且要抵抗更深技术的侵入。阿里将其开源，旨在更多人加入到这个「路漫漫其修远兮」的终端热修复解决方案中，欢迎大家参与开源，提宝贵issue。从目前的android端技术发展来看，原则上这个hook角度是可以永存的。当然还需要更多人的参与与维护，冲破各种未来的限制。另外，热修复只是此技术的一种表现形式，它的更多作用与潜藏的力量，我们共同挖掘。
+
+
+---
+PS: pc上查看请到[这里](http://lirenlong.github.io/hotfix/).
