--- a/_posts/blog/2016-05-19-Google-IO-2016.md
+++ b/_posts/blog/2016-05-19-Google-IO-2016.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Google I/O 2016 Keynote 开场环节随笔
-description: 
+description: 2016年5月18日，美国旧金山山景城，google总部举办第九届I/O大会，为期3天。先来看看Keynote环节有哪些内容。
 category: blog
 ---
 
